# Cpp11Examples

./: .gitignore  CMakeLists.txt  README.md  dict.txt
Cpp11Examples/: CMakeLists.txt  analyze.sh  compile.sh
Cpp11Examples/include/: ExamplesHeader.hpp  MyClass.hpp  MyInteger.hpp  PrintUtils.hpp  stdafx.h
Cpp11Examples/src/: Main.cpp  ReturnValueOptimizationExample.cpp
Cpp11Examples/src/include/: ExamplesHeader.hpp  PrintUtils.hpp  Rot13Comparison.hpp  Timer.hpp  stdafx.h
Cpp11Examples/src/src/: Main.cpp  ReturnValueOptimizationExample.cpp  Rot13Comparison.cpp
EnsureMove/: compile.sh
EnsureMove/src/include/: DebugUtil.hpp
EnsureMove/src/src/: main.cpp
PerformanceComparison/: CMakeLists.txt  compile.sh  compile_clang350.sh  compile_gcc4.3.2.sh  compile_gcc4.9.1.sh  run_callgrind.sh
PerformanceComparison/src/include/: PrintUtils.hpp  Timer.hpp  stdafx.h
PerformanceComparison/src/src/: Main.cpp
Rot13/: CMakeLists.txt  compile.sh
Rot13/src/include/: Rot13Comparison.hpp
Rot13/src/src/: Rot13.cpp  Rot13Comparison.cpp
